Fixed error mapping enum by ordinal instead of string